<resources>
    <string name="app_name">Popcorn story collection</string>

    <string name="authors_action_bar_title">Authors</string>
    <string name="author_profile_action_bar_title">Author Profile</string>
    <string name="search_hint">Search</string>
    <string name="author">author</string>
    <string name="download">download</string>
    <string name="remove">remove</string>
    <string name="playlist">playlist</string>
    <string name="related">related</string>
    <string name="settings">settings</string>
    <string name="theme">Theme</string>
    <string name="dark_mode">Dark mode</string>
    <string name="categories">CATEGORIES</string>
    <string name="show_all">SHOW ALL</string>
    <string name="show_less">SHOW LESS</string>
    <string name="sort_by">Sort by</string>
    <string name="cant_connect">Can\'t connect at the moment</string>
    <string name="read_downloads">read downloads</string>
    <string name="cancel">Cancel</string>
    <string name="home">Home</string>
    <string name="downloads">Downloads</string>
    <string name="messages">Messages</string>
    <string name="authors">Authors</string>
    <string name="downloading">Downloading…</string>
    <string name="removing">Removing…</string>
    <string name="delete">Delete</string>
    <string name="delete_message">Are you sure you want to delete this story from downloads?</string>
    <string name="delete_all_messages">Are you sure you want to delete all stories from downloads?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="language">Language</string>
    <string name="stories">STORIES</string>
    <string name="newest_first">newest first</string>
    <string name="oldest_first">oldest first</string>
    <string name="shuffle">shuffle</string>
    <string name="not_connected">Can\'t connect at the moment\nplease check the\nCONNECTION\nand try again</string>
    <string name="changeLanguage">Change language (Beta)</string>
    <string name="retry">retry</string>
    <string name="you_are_offline">you are offline\nread downloaded stories</string>
    <string name="connect_to_the_internet">to see the latest updates\nturn on your mobile data\nor wifi and</string>
    <string name="notice">To read the story</string>
    <string name="rewarded_msg">this is a premium story you must watch the video before reading...</string>
    <string name="left">Left</string>
    <string name="watch_video">watch video</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="nativead_ad_unit_id" translatable="false">ca-app-pub-4079566491683275/7062508973</string>
    <string name="feedback">Feedback</string>
    <string name="app_suggestions">App suggestions (send as email)</string>
    <string name="rate_us">Rate Us</string>
    <string name="contact">Contacts</string>
    <string name="contact_am">Contact developer</string>
    <string name="contact_mp">Contact meedum paaru</string>
    <string name="like_mp">Like meedum paaru</string>
    <string name="about">About</string>
    <string name="app_v">App version</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="delete_downloads">Delete downloaded stories</string>
    <string name="delete_all_downloads">Delete all downloaded stories</string>
    <string name="deleting">Deleting...</string>
    <string name="minute">minutes</string>
    <string name="no_connection">NO CONNECTION</string>
    <string name="signin_msg">To load the daa you need to connect your device to the internet. please turn on your mobile data or wifi..!</string>
    <string name="ok">OK</string>
    <string name="font_size">Font size</string>
    <string name="set_to_default">Set to default</string>
    <string name="text_size">Text size</string>
    <string name="Version">Version 2.0</string>
    <string name="copy">© 2020  Alakamandawa Inc.</string>
    <string name="app_info">App info</string>
    <string name="no_downloads_yet">No downloads yet\nwhen you download stories\nthey will appear here</string>
    <string name="title_activity_author_pro">AuthorProActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="latestStories">Latest Stories</string>
</resources>
