<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/dimen_10dp"
    android:background="@color/primaryBgColor">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/primaryTextColor"
        android:textSize="@dimen/dimen_22sp"
        android:text="@string/app_name"
        android:padding="10dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/appVrTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/primaryTextColor"
        android:textSize="@dimen/dimen_18sp"
        android:text="@string/Version"
        android:padding="5dp"
        android:textAlignment="center"/>

    <ImageView
        android:layout_width="@dimen/dimen_100dp"
        android:layout_height="@dimen/dimen_100dp"
        android:src="@drawable/popcorn_logo"
        android:layout_gravity="center"
        android:layout_margin="@dimen/dimen_10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/copy"
        android:textAlignment="center"
        android:textSize="@dimen/dimen_18sp"
        android:textColor="@color/primaryTextColor"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_20dp"
        android:src="@drawable/alakamandawa_gray"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/dimen_10dp" />

</LinearLayout>