<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".download.DownloadsActivity"
    android:orientation="vertical"
    android:background="@color/primaryBgColor">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/backIb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_back_arrow"
                    android:background="@null"
                    android:layout_gravity="center_vertical"
                    android:padding="@dimen/dimen_10dp"
                    android:tint="@color/primaryTextColor"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/downloads"
                    android:textSize="@dimen/dimen_20sp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/primaryTextColor"/>

                <ImageButton
                    android:id="@+id/menuIb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_more"
                    android:background="@null"
                    android:layout_gravity="center_vertical"
                    android:padding="@dimen/dimen_10dp"
                    android:tint="@color/primaryTextColor"/>

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:layout_marginTop="@dimen/dimen_10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/you_are_offline"
                    android:textSize="@dimen/dimen_18sp"
                    android:layout_gravity="center_horizontal"
                    android:textAlignment="center"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/primaryTextColor"
                    android:layout_marginVertical="@dimen/dimen_10dp"
                    android:layout_marginHorizontal="@dimen/dimen_50dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/connect_to_the_internet"
                    android:textSize="@dimen/dimen_18sp"
                    android:layout_gravity="center_horizontal"
                    android:textAlignment="center"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/retryBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:text="@string/retry"
                    android:textSize="@dimen/dimen_20sp"
                    android:textColor="@color/secondaryColor"
                    android:padding="10sp"
                    android:layout_gravity="center_horizontal"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/downloadedStoryRv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_20dp"/>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <ProgressBar
            android:id="@+id/downloadPb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>

        <TextView
            android:id="@+id/noDownloadsTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dimen_18sp"
            android:text="@string/no_downloads_yet"
            android:textColor="@color/primaryTextColor"
            android:layout_centerInParent="true"
            android:textAlignment="center"/>

    </RelativeLayout>

</LinearLayout>