<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context=".story.ReadStoryActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="0dp"
            app:cardElevation="2dp"
            app:cardBackgroundColor="@color/primaryColor">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/storyImg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:src="@drawable/img_place_holder"
                        android:scaleType="fitXY"
                        android:foreground="@color/imgOverlay"/>

                    <RelativeLayout
                        android:id="@+id/showRelRl"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/relatedListBgColor"
                        android:layout_alignParentBottom="true"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp">

                        <ProgressBar
                            android:id="@+id/relStoryPb"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_centerHorizontal="true"/>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/relatedStoryRv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"/>

                    </RelativeLayout>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="5dp">

                    <TextView
                        android:id="@+id/titleTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:padding="5dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/authorNameTv"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="18sp"
                            android:textColor="@color/primaryTextColor"
                            android:padding="5dp"/>

                        <TextView
                            android:id="@+id/dateTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:padding="5dp"
                            android:textColor="@color/primaryTextColor"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/primaryColor"
            app:cardElevation="2dp"
            app:cardCornerRadius="4dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/authorIb"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:src="@drawable/ic_author"
                            android:background="@null"
                            android:layout_gravity="center_horizontal"
                            android:tint="@color/primaryTextColor"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/author"
                            android:textColor="@color/primaryTextColor"
                            android:textAlignment="center"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/downloadIb"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_download"
                            android:background="@null"
                            android:padding="10dp"
                            android:layout_gravity="center_horizontal"
                            android:tint="@color/primaryTextColor"/>

                        <TextView
                            android:id="@+id/downloadBtnTipTv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/download"
                            android:textColor="@color/primaryTextColor"
                            android:textAlignment="center"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/playListIb"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_playlist"
                            android:background="@null"
                            android:padding="10dp"
                            android:layout_gravity="center_horizontal"
                            android:tint="@color/primaryTextColor"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/playlist"
                            android:textColor="@color/primaryTextColor"
                            android:textAlignment="center"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageButton
                            android:id="@+id/relatedStoriesIb"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_related"
                            android:background="@null"
                            android:padding="10dp"
                            android:layout_gravity="center_horizontal"
                            android:tint="@color/primaryTextColor"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/related"
                            android:textColor="@color/primaryTextColor"
                            android:textAlignment="center"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="4dp"
            app:cardBackgroundColor="@color/storyBgColor"
            app:cardElevation="2dp"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/storyTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textSize="22sp"
                    android:lineSpacingExtra="15dp"
                    android:textColor="@color/storyTextColor"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>